# alphawire

./: .gdbinit  .gitignore  CMakeLists.txt  alphawire.natvis  readme.md  todo.md
dbg/: gdb_types.py
libs/libusbk/: libusbk.h
libs/libusbk/amd64/: libusbK.def  libusbK.lib
libs/mingw/: Wia.h
py/: alphawire-cffi-compile.py  alphawire-cffi.py  sony_ptp_ip_search.py
src/aw/: aw-backend.c  aw-backend.h  aw-const.h  aw-control.c  aw-control.h  aw-device-list.c  aw-device-list.h  aw-log.c  aw-log.h  aw-util.c  aw-util.h
src/aw/platform/: usb-const.h
src/aw/platform/ip/: aw-backend-ip.c  aw-backend-ip.h  http-client.c  http-client.h
src/aw/platform/libusb/: aw-backend-libusb.c  aw-backend-libusb.h
src/aw/platform/osx/: aw-backend-iokit.c  aw-backend-iokit.h
src/aw/platform/windows/: aw-backend-libusbk.c  aw-backend-libusbk.h  aw-backend-wia.c  aw-backend-wia.h  win-utils.c  win-utils.h
src/imgui/: imgui_demo.cpp
src/mlib/: marena.c  marena.h  mlib-file-stdlib.c  mlib-log-stdlib.c  mlib.c  mlib.h  msock.c  msock.h  mtest.h  mxml.c  mxml.h  utf.c  utf.h  utf8.c  utf8.h
src/platform/: usb-const.c  usb-const.h
src/platform/ip/: http-client.c  http-client.h  ptp-backend-ip.c  ptp-backend-ip.h
src/platform/libusb/: ptp-backend-libusb.c  ptp-backend-libusb.h
src/platform/osx/: ptp-backend-iokit.c  ptp-backend-iokit.h
src/platform/windows/: ptp-backend-libusbk.c  ptp-backend-libusbk.h  ptp-backend-wia.c  ptp-backend-wia.h  win-utils.c  win-utils.h
src/ptp/: ptp-backend.c  ptp-backend.h  ptp-const.h  ptp-control.c  ptp-control.h  ptp-device-list.c  ptp-device-list.h  ptp-log.c  ptp-log.h  ptp-util.c  ptp-util.h  utf.c  utf.h
src/ui/: ui-context.h  ui-live-view.cpp  ui-live-view.h  ui-main.cpp  ui-ptp-debug.cpp  ui-ptp-debug.h
